# IOT-AIX

./: .env.local.example  .gitignore  README.md
AIX/: CMakeLists.txt  Kconfig.projbuild  README.md  configure_preview.ps1  partitions.csv  sdkconfig.camera.defaults  sdkconfig.defaults  sdkconfig.hardware.defaults  sync_preview_sdkconfig.ps1  sync_runtime_config.ps1
AIX/main/: CMakeLists.txt  Kconfig.projbuild  action_controller.c  action_controller.h  action_policy.c  action_policy.h  airbag_control.c  airbag_control.h  alert_arbiter.c  alert_arbiter.h  camera_board_devkitc1_ov5640.h  camera_local.c  camera_local.h  camera_preview.c  camera_preview.h  config_input.c  config_input.h  device_identity.c  device_identity.h  dfplayer.c  dfplayer.h  distance_estimator.c  distance_estimator.h  hardware_health.c  hardware_health.h  host_risk.c  host_risk.h  idf_component.yml  main.c  motion_detector.c  motion_detector.h  mpu6050_sensor.c  mpu6050_sensor.h  network_runtime.c  network_runtime.h  pneumatic_controller.c  pneumatic_controller.h  pneumatic_policy.c  pneumatic_policy.h  pressure_sensor.c  (+19 more)
AIX/test/: action_policy_test.c  alert_arbiter_test.c  camera_board_profile_test.c  camera_local_test.c  camera_preview_test.c  config_input_parse_test.c  demo_mode_test.c  distance_estimator_test.c  hardware_health_test.c  healthz_test.c  (+13 more)
docs/: 当前仓库阈值与临界判断汇报.md  环境安装与烧录提示词.md  项目审阅与优化建议.md
host_app/: README.md  ensure_mobile_hotspot.ps1  render_acceptance.py  requirements.txt  run_host_app.cmd  start_host_app.cmd  start_stack.ps1
scripts/: run_e2e_acceptance.ps1  runtime_paths.ps1  verify.ps1
(+112 files in other folders)
